feat: front consumindo a lista

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>Yasc</h1>
         <div class="container">
             <section>
-                <button>Fazer requisão</button>
-                <button>Listar worker</button>
-                <ul></ul>
+                <button onclick="handleCreatePost()">Fazer requisão</button>
+                <button onclick="handleListarSqs()">Listar worker</button>
+                <ul id="list-sqs"></ul>
             </section>
 
             <section>
@@ -33,6 +33,7 @@
             </section>
         </div>
     </main>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
